Fix truncated card view on redirect in team component

--- a/src/index.css
+++ b/src/index.css
@@ -618,10 +618,6 @@
     margin-bottom: calc(var(--spacing) * 20);
   }
 
-  .block {
-    display: block;
-  }
-
   .flex {
     display: flex;
   }
